<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright">

    <EditText
        android:layout_width="0dp"
        android:inputType="textPersonName"
        android:text="@string/noteName"
        android:ems="10"
        android:id="@+id/prodName"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintName"
        android:backgroundTint="@android:color/background_dark"
         />

    <EditText
        android:layout_height="0dp"
        android:inputType="text|textMultiLine"
        android:text="@string/prodDesc"
        android:background="@null"
        android:ems="10"
        android:id="@+id/prodDesc"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/prodName"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/prodName"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_width="0dp"
        app:layout_constraintRight_toRightOf="@+id/prodName"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="top"
        android:hint="@string/hintdesc"
        android:backgroundTint="@android:color/background_dark" />
</android.support.constraint.ConstraintLayout>