<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hut">

    <TextView
        android:text="@string/about"
        android:id="@+id/about"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_width="0dp"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="36sp"
        android:foregroundGravity="center" />

    <TextView
        android:text="@string/about1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about1"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toBottomOf="@+id/about"
        app:layout_constraintLeft_toLeftOf="@+id/about"
        app:layout_constraintRight_toRightOf="@+id/about"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:text="@string/about2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about2"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/about1"
        app:layout_constraintLeft_toLeftOf="@+id/about1"
        app:layout_constraintRight_toRightOf="@+id/about1"
        android:textSize="24sp"
        android:textColor="@android:color/white" />
</android.support.constraint.ConstraintLayout>