<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_height="wrap_content"
        app:cardElevation="7dp"
        android:id="@+id/cardView"
        app:cardCornerRadius="12dp"
        app:cardBackgroundColor="?android:attr/textColorHighlight"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/dttimeConstraint"
                android:layout_width="0dp"
                android:id="@+id/dttimeCons"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/guideline3"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_height="wrap_content" />

            <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline3"
                android:orientation="vertical"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="190dp"
                app:layout_constraintGuide_percent="0.5523256" />

            <TextView
                android:text="@string/nameConstraint"
                android:id="@+id/nameCons"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                app:layout_constraintRight_toLeftOf="@+id/guideline3"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/dttimeCons"
                app:layout_constraintTop_toTopOf="@+id/dttimeCons" />

            <TextView
                android:text="@string/descConstraint"
                android:id="@+id/descCons"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_width="0dp"
                app:layout_constraintHorizontal_bias="0.47"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/nameCons"
                android:layout_marginTop="8dp"
                 />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>